[package]
name = "google-signin"
edition = "2018"
version = "0.4.0"
description = "API bindings for Google Sign-In"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/wyyerd/google-signin-rs"
documentation = "https://docs.rs/google-signin"
keywords = ["google", "signin", "oauth", "oauth2", "api"]
categories = ["api-bindings"]

[features]
default = ["with-rustls"]
with-rustls = ["hyper-rustls"]
with-openssl = ["hyper-openssl"]

[dependencies]
hyper = "0.13"
hyper-rustls = { version = "0.21", optional = true }
hyper-openssl = { version = "0.8", optional = true }
bytes = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "7"
thiserror = "1"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
