[package]
name = "google-signin"
edition = "2021"
version = "0.4.0"
description = "API bindings for Google Sign-In"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/wyyerd/google-signin-rs"
documentation = "https://docs.rs/google-signin"
keywords = ["google", "signin", "oauth", "oauth2", "api"]
categories = ["api-bindings"]

[features]
default = ["with-hypertls"]
with-hypertls = ["hyper-tls"]
with-openssl = ["hyper-openssl"]

[dependencies]
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-tls = { version = "^0.5", optional = true }
hyper-openssl = { version = "^0.9", optional = true }
bytes = "^1.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
jsonwebtoken = "^7"
cache_control = "0.1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
